--- a/scripts-arch/hyprland-overrides.conf
+++ b/scripts-arch/hyprland-overrides.conf
@@ -2,16 +2,33 @@
 # Add your custom settings here
 
 # Use single default monitor (see all monitors with: hyprctl monitors)
-monitor = DP-1, 1440x900@75, auto, 1
+# --- Configuração de Monitores ---
+# Lógica: [Nome], [Resolução@Hz], [Posição], [Escala]
+# O HDMI fica à esquerda (0x0) e o DP à direita (1920x0)
+# monitor = DP-1, 1440x900@75, auto, 1
+# monitor = HDMI-A-1, 1920x1080@60, 0x0, 1
 monitor = HDMI-A-1, 1920x1080@60, 0x0, 1
+monitor = DP-1, 1440x900@75, 1920x0, 1
+
+# --- Variáveis de Ambiente (XDG & Wayland) ---
+# Importante para garantir que o Emacs e outros apps saibam que estão no Wayland
+env = GDK_BACKEND,wayland,x11
+env = QT_QPA_PLATFORM,wayland;xcb
+env = GDK_SCALE,1 
+# Nota: Evite GDK_SCALE=2 se seus monitores são 1080p/900p; 
+# isso fará tudo parecer gigante. Use 1 a menos que tenha telas 4K.
+
+exec-once = /usr/bin/emacs --daemon
 
 input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
-  kb_layout = us
+  # kb_layout = us
+  kb_layout = br
+  kb_variant = abnt2
   # kb_variant = altgr-intl
-  kb_variant = intl
-  kb_options = compose:caps # ,grp:shifts_toggle
+  # kb_variant = intl
+  # kb_options = compose:caps # ,grp:shifts_toggle
 
   sensitivity = -1.5
 
