--- a/scripts-arch/assets/hyprland-overrides.conf
+++ b/scripts-arch/assets/hyprland-overrides.conf
@@ -13,11 +13,15 @@ monitor = DP-1, 1440x900@75, 1920x0, 1
 # --- Variáveis de Ambiente (XDG & Wayland) ---
 # Importante para garantir que o Emacs e outros apps saibam que estão no Wayland
 env = GDK_BACKEND,wayland,x11
-env = QT_QPA_PLATFORM,wayland;xcb
-env = GDK_SCALE,1 
+env = QT_QPA_PLATFORM,wayland
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 # Nota: Evite GDK_SCALE=2 se seus monitores são 1080p/900p; 
 # isso fará tudo parecer gigante. Use 1 a menos que tenha telas 4K.
 
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/bin/emacs --daemon
 
 input {
